Add strong type checking to login and create account routes
